# auto-readme-gen

./: .autoreadme.yml  README.md  main.py  pyproject.toml  requirements.txt
auto_readme_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
autoreadme/: main.py
